docs/src/content/docs/es/0.1.0/reference/input-keys.mdx
---
title: Teclas de Entrada
description: Guía de referencia para las teclas de teclado usadas para
  operaciones de entrada.
slug: es/0.1.0/reference/input-keys
---

Esta referencia detalla los códigos numéricos de teclas utilizados en Ludens para mapear acciones físicas o en pantalla al motor de RPG Maker MV/MZ.

Cuando configuras la propiedad **Input Key** de un botón en pantalla (A, B, X, Y) en el menú de Ajustes, estás asignando uno de estos códigos.

### Cómo funciona internamente

Debido a que los dispositivos móviles carecen de teclados físicos, Ludens sirve como puente entre sus botones nativos de interfaz y el entorno web del juego. Cuando presionas un botón en pantalla, la aplicación envía un fragmento de JavaScript al WebView a través de `evaluateJavascript`. Este script llama directamente al manejador de entrada del motor (`Input.js`) para un tipo de evento específico (ej. `keydown`, `keyup`) y le pasa un pseudo evento, evitando la necesidad de despachar eventos DOM sintéticos.

## Teclas de Movimiento y Control

La siguiente tabla enumera las teclas principales utilizadas para el movimiento de personajes y la interacción en el juego.

| Nombre de la Tecla | Código | Acción Típica por Defecto (MV)      | Acción Típica por Defecto (MZ)      |
|--------------------|--------|-------------------------------------|-------------------------------------|
| `Enter`            | 13     | OK / Acción                         | OK / Acción                         |
| `Escape`           | 27     | Cancelar / Menú                     | Cancelar / Menú                     |
| `Up` (Arriba)      | 38     | Mover Arriba                        | Mover Arriba                        |
| `Down` (Abajo)     | 40     | Mover Abajo                         | Mover Abajo                         |
| `Left` (Izquierda) | 37     | Mover Izquierda                     | Mover Izquierda                     |
| `Right` (Derecha)  | 39     | Mover Derecha                       | Mover Derecha                       |
| `Shift`            | 16     | Correr (Dash)                       | Correr (Dash)                       |
| `Control`          | 17     | Control Especial                    | Control Especial                    |
| `Alt`              | 18     | Control Especial                    | Control Especial                    |

## Teclas Gráficas

Estas teclas se utilizan principalmente para comandos del sistema y relacionados con gráficos dentro del motor.

| Nombre de la Tecla | Código | Función en RPG Maker            |
|--------------------|--------|---------------------------------|
| `F2`               | 113    | Mostrar/Ocultar Contador FPS    |
| `F3`               | 114    | Alternar Modo de Estiramiento   |
| `F4`               | 115    | Pantalla Completa (Solo PC)     |

:::tip
Aunque `F4` se usa históricamente para pantalla completa en escritorio, normalmente no tiene efecto o se comporta de manera diferente dentro del contexto de un WebView móvil.
:::
